Prevent CTA falling behind footer

--- a/rca/static_src/sass/components/_booking-bar.scss
+++ b/rca/static_src/sass/components/_booking-bar.scss
@@ -60,7 +60,7 @@
 
     &--fixed {
         &,
-        .sticky-bar & {
+        .sticky-bar.headroom-pinned & {
             position: fixed;
         }
     }
